add fileshow interface

--- a/templates/file-show/file_show-main.html
+++ b/templates/file-show/file_show-main.html
@@ -31,14 +31,8 @@
         <div class="panel-body">
             <form action="{% url 'files:file_show' %}" method="post" enctype="multipart/form-data"
                 class="con" style="width:80%;height:500px;border-style:solid;border-width:1pt;margin:0 auto;" id="editorDiv"
-            ># -*- coding: utf-8 -*-
-
-import os
-
-a = 2
-b = 3
-
-print(a + b)
+            >
+            {{text}}
 </form>
         </div>
     </div>
