add disabled user_name

--- a/templates/code/code_upload.html
+++ b/templates/code/code_upload.html
@@ -45,7 +45,7 @@
       <div class="formColumn column form-column full col col-sm-12 form-horizontal"  span="12" horizontal> 
       <div class="panel panel-default fieldset unsort no_title"  > <div class="panel-heading"><i class='icon fa fa-chevron-up chevron'></i><h3 class="panel-title"></h3></div> 
       <div class="panel-body " > <div id="div_id_userinfo" class="form-group"> <label for="id_userinfo" class="control-label ">上传用户</label> 
-      <div class="controls "> <input type="text" name="userinfo" class="text-field admintextinputwidget form-control" maxlength="150" id="id_userinfo" value={{request.user.username}}> </div> </div> 
+      <div class="controls "> <input type="text" name="userinfo" class="text-field admintextinputwidget form-control" maxlength="150" id="id_userinfo" value={{request.user.username}} disabled="True"> </div> </div> 
       <div id="div_id_codename" class="form-group"> <label for="id_codename" class="control-label ">程序名</label> 
       <div class="controls "> <input type="text" name="codename" class="text-field admintextinputwidget form-control" maxlength="50" id="id_codename"> </div> </div> 
       <div id="div_id_desc" class="form-group"> <label for="id_desc" class="control-label ">程序描述</label> 
