--- a/templates/code/code_upload.html
+++ b/templates/code/code_upload.html
@@ -51,7 +51,7 @@
       <div id="div_id_desc" class="form-group"> <label for="id_desc" class="control-label ">程序描述</label> 
       <div class="controls "> <input type="text" name="desc" class="text-field admintextinputwidget form-control" maxlength="300" id="id_desc"> </div> </div>
       <div id="div_id_codefile" class="form-group"> <label for="id_codefile" class="control-label ">Codefile</label> 
-      <div class="controls "> <input type="file" name="codefile" class="adminfilewidget" id="id_codefile"> </div> </div> </div> </div>
+      <div class="controls "> <input type="file" name="codefile" class="adminfilewidget" id="id_codefile" required="true"> </div> </div> </div> </div>
       </div>
       {% csrf_token %}
 </div>
