--- a/templates/usercenter_info.html
+++ b/templates/usercenter_info.html
@@ -59,12 +59,12 @@
 						    <i class="error-tips"></i>
                         </li>
 						<li>手&nbsp;&nbsp;机&nbsp;&nbsp;号：
-                            <input class="borderno" type="text" name="mobile" id="mobile" placeholder="请输入你的手机号码" value="{{ request.user.mobile|default_if_none:'' }}" maxlength="10">
-                            <span class="green changeemai_btn" id="change_mobile_Btn">[修改]</span>
+                            <input class="borderno" type="text" name="mobile" id="mobile" placeholder="请输入你的手机号码" value="{{ request.user.mobile|default_if_none:'' }}" maxlength="10" disabled="True">
+                            <span class="green changeemai_btn" id="change_mobile_Btn">[添加或修改]</span>
                         </li>
                         <li>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：
-                        	<input class="borderno" type="text" name="email" readonly="readonly" value="{{ request.user.email }}"/>
-                            <span class="green changeemai_btn" id="change_email_Btn">[修改]</span>
+                        	<input class="borderno" type="text" name="email" readonly="readonly" value="{{ request.user.email }}" disabled="Ture"/>
+                            <span class="green changeemai_btn" id="change_email_Btn">[添加或修改]</span>
                     	</li>
 						<li class="button heibtn">
 							<input  type="submit" id="jsEditUserBtn" value="保存">
