--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -17,7 +17,7 @@
                     {% endifequal %}><a href="">个人资料</a></li>
                     <li {% ifequal  '/users/mycourse/' request.path %}
                         class="active2"
-                    {% endifequal %}><a href="{% url 'users:user_code' %}">我的程序</a></li>
+                    {% endifequal %}><a href="{% url 'users:userchecked_code' %}">我的程序</a></li>
                     <li {% ifequal  '/users/myfav/' request.path|slice:'13' %}
                         class="active2"
                     {% endifequal %}><a href="">我的視頻</a></li>
