--- a/templates/unchecked_mycode.html
+++ b/templates/unchecked_mycode.html
@@ -1,30 +1,33 @@
-{% extends 'usercenter_base.html' %}
-{% load static %}
-{% block title %}
-    个人信息
-{% endblock %}
-{% block user_bread %}
+{% extends 'base.html' %}
+{% load staticfiles %}
+{% block title %}程序列表{% endblock %}
+
+{% block custom_bread %}
     <section>
         <div class="wp">
-            <ul  class="crumbs">
-                <li><a href="">首页</a>></li>
-                <li><a href="">个人中心</a>></li>
-                <li>个人信息</li>
+            <ul class="crumbs">
+                <li><a href="{% url 'users:user_info' %}">返回个人中心</a></li>
             </ul>
         </div>
     </section>
-    {% endblock %}
+{% endblock %}
 
-{% block custom_right_content %}
-    <section>
+{% block content %}
+<section>
     <div class="wp">
         <div class="list" style="margin-top:0;">
             <div class="left layout">
+                <div class="head">
+					<ul class="tab_header">
+						<li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'users:userchecked_code' %}" >已审核程序列表 </a></li>
+						<li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'users:userunckecked_code' %}" >未审核程序列表 </a></li>
+					</ul>
+				</div>
                 <div id="inWindow">
                     <div class="tab_cont " id="content">
                     <div class="group_list">
-                        {% if checked_codes %}
-                            {% for code in checked_codes %}
+                        {% if unchecked_codes %}
+                            {% for code in unchecked_codes %}
                             <div class="box" style="height: 150px">
                                 <div class="des">
                                     <a href="../../fileshow/{{ user.username }}/{{code.id}}">
@@ -77,11 +80,7 @@
         </div>
     </div>
 </section>
-
 {% endblock %}
-
 {% block custom_js %}
-<script src="{% static 'js/plugins/jquery.upload.js' %}" type='text/javascript'></script>
-<script src="{% static 'js/validateDialog.js' %}" type="text/javascript"></script>
-<script src="{% static 'js/deco-user.js' %}"></script>
+<script type="text/javascript" src="/static/js/code_upload.js"></script>
 {% endblock %}
