--- a/templates/checked_mycode.html
+++ b/templates/checked_mycode.html
@@ -21,7 +21,8 @@
 					<ul class="tab_header">
 						<li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'users:userchecked_code' %}" >已审核程序列表 </a></li>
 						<li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'users:userunckecked_code' %}" >未审核程序列表 </a></li> 
-					</ul>
+                        <li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'coding:upload' %}" >上传程序 </a></li>
+                    </ul>
 				</div>
                 <div id="inWindow">
                     <div class="tab_cont " id="content">
