--- a/templates/unchecked_mycode.html
+++ b/templates/unchecked_mycode.html
@@ -21,6 +21,7 @@
 					<ul class="tab_header">
 						<li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'users:userchecked_code' %}" >已审核程序列表 </a></li>
 						<li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'users:userunckecked_code' %}" >未审核程序列表 </a></li>
+                        <li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'coding:upload' %}" >上传程序 </a></li>
 					</ul>
 				</div>
                 <div id="inWindow">
