--- a/templates/unchecked_mycode.html
+++ b/templates/unchecked_mycode.html
@@ -43,11 +43,11 @@
                                     </span>
                                 </div>
                                 <div class="bottom">
-                                    <a href=""><span class="fl">来自{{ code.userinfo }}</span></a>
+                                    <!-- <a href=""><span class="fl">来自{{ code.userinfo }}</span></a>
                                     <span class="star fr  notlogin
                                         " data-favid="15">
                                         {{ code.fav_nums }}
-                                    </span>
+                                    </span> -->
                                 </div>
                             </div>
                             {% endfor %}
