--- a/templates/register.html
+++ b/templates/register.html
@@ -58,7 +58,7 @@
                                 <label>短信验证码</label>
                                 <input id="jsPhoneRegCaptcha" name="mobile_code" type="text" placeholder="输入手机验证码" value=""/>
                             </div>
-                            <input class="verify-code-btn sendcode" id="jsSendCode"  value="发送验证码">
+                            <button class="verify-code-btn sendcode" id="jsSendCode"  value="发送验证码" type="button">发送验证码</button>
                         <div class="error btns" id="jsMobileTips">
                             {{ msg }}
                         </div>
