--- a/templates/register.html
+++ b/templates/register.html
@@ -57,9 +57,9 @@
                          <div class="form-group marb8 verify-code">
                                 <label>短信验证码</label>
                                 <input id="jsPhoneRegCaptcha" name="mobile_code" type="text" placeholder="输入手机验证码" value=""/>
-                            </div>
+                        </div>
                             <button class="verify-code-btn sendcode" id="jsSendCode"  value="发送验证码" type="button">发送验证码</button>
-                        <div class="error btns" id="jsMobileTips">
+                        <div class="error" id="jsMobileTips" >
                             {{ msg }}
                         </div>
                         <button class="btn btn-green" id="jsMobileRegBtn" type="button">注册</button>
