--- a/templates/code/code_upload.html
+++ b/templates/code/code_upload.html
@@ -56,7 +56,7 @@
       {% csrf_token %}
 </div>
 <div class="form-actions well well-sm clearfix">
-  <button type="submit" class="default btn btn-primary hide-xs" name="_save" data-loading-text="保存中.." id="CodeUploadBtn"><i class="fa fa-save"></i> 保存文件</button>
+  <button type="button" class="default btn btn-primary hide-xs" name="_save" data-loading-text="保存中.." id="CodeUploadBtn"><i class="fa fa-save"></i> 保存文件</button>
 </div>
 </form>
 </div>
