--- a/templates/code/code_list.html
+++ b/templates/code/code_list.html
@@ -59,22 +59,22 @@
                     <div class="pageturn">
                         <ul class="pagelist">
                             {% if all_codes.has_previous %}
-                                <li class="long"><a href="?{{ all_codes.previous_page_number.querystring }}">上一页</a></li>
+                                <li class="long"><a href="?page={{ all_codes.previous_page_number.querystring }}">上一页</a></li>
                             {% endif %}
 
-                            {% for page in all_codes.pages %}
+                            {% for page in all_codes.paginator.page_range %}
                                 {% if page %}
                                     {% ifequal page all_codes.number %}
-                                        <li class="active"><a href="?{{ page.querystring }}">{{ page }}</a></li>
+                                        <li class="active"><a href="?page={{ page }}">{{ page }}</a></li>
                                     {% else %}
-                                        <li><a href="?{{ page.querystring }}" class="page">{{ page }}</a></li>
+                                        <li><a href="?page={{ page }}" class="page">{{ page }}</a></li>
                                     {% endifequal %}
                                 {% else %}
                                     <li class="none"><a href="">...</a></li>
                                 {% endif %}
                             {% endfor %}
                             {% if all_codes.has_next %}
-                                <li class="long"><a href="?{{ all_codes.next_page_number.querystring }}">下一页</a></li>
+                                <li class="long"><a href="?page={{ all_codes.next_page_number }}">下一页</a></li>
                             {% endif %}
                         </ul>
                     </div>
