--- a/templates/code/code_list.html
+++ b/templates/code/code_list.html
@@ -59,7 +59,7 @@
                     <div class="pageturn">
                         <ul class="pagelist">
                             {% if all_codes.has_previous %}
-                                <li class="long"><a href="?page={{ all_codes.previous_page_number.querystring }}">上一页</a></li>
+                                <li class="long"><a href="?page={{ all_codes.previous_page_number }}">上一页</a></li>
                             {% endif %}
 
                             {% for page in all_codes.paginator.page_range %}
