--- a/templates/code/code_list.html
+++ b/templates/code/code_list.html
@@ -22,15 +22,18 @@
             <div class="left layout">
                 <div class="head">
 					<ul class="tab_header">
-						<li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'coding:sort_bytime' %}" >最新上传</a></li>
-						<li class="{% ifequal sort 'hot' %}active{% endifequal %}"><a href="{% url 'coding:sort_bydownload' %}" >下载最多 </a></li>
-                        <li class="{% ifequal sort 'students' %}active{% endifequal %}"><a href="{% url 'coding:sort_bylikes' %}" >点赞最多 </a></li>
+						<li class="{% ifequal content_type 'time_list' %}active{% endifequal %}"><a href="{% url 'coding:sort_bytime' %}" >最新上传</a></li>
+						<li class="{% ifequal content_type 'download_list' %}active{% endifequal %}"><a href="{% url 'coding:sort_bydownload' %}" >下载最多 </a></li>
+                        <li class="{% ifequal content_type 'fav_list' %}active{% endifequal %}"><a href="{% url 'coding:sort_bylikes' %}" >点赞最多 </a></li>
+                         {% if request.user.is_admin %}
+                            <li class="{%ifequal content_type 'code_check' %}active{% endifequal %}"><a href="{% url 'coding:code_check'%}">审核代码</a></li>                   
+                        {% endif %}     
                         <li class="{% ifequal sort 'students' %}active{% endifequal %}"><a href="{% url 'coding:upload'%}" >上传我的代码</a></li>
-                        
+
 					</ul>
 				</div>
                 <div id="inWindow">
-                    <div class="tab_cont " id="content">
+                    <div class="tab_cont " id="content"vv>
                     <div class="group_list">
                         {% if all_codes %}
                             {% for code in all_codes %}
