--- a/templates/video/base.html
+++ b/templates/video/base.html
@@ -86,7 +86,7 @@
                                     href="{% url 'index' %}">首页</a></li>
                             <li {% if request.path|slice:'7' == '/course' %}class="active"{% endif %}>
                                 <a href="{% url 'coding:code_list' %}">
-                                    查看程序<img class="hot" src="{% static 'images/nav_hot.png' %}">
+                                    星上程序<img class="hot" src="{% static 'images/nav_hot.png' %}">
                                     
                                 </a>
                             </li>
