--- a/templates/checkfail_mycode.html
+++ b/templates/checkfail_mycode.html
@@ -19,7 +19,8 @@
             <div class="left layout">
                 <div class="head">
 					<ul class="tab_header">
-						<li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'users:userchecked_code' %}" >已审核程序列表 </a></li>
+                        <li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'users:userchecked_code' %}" >审核通过程序列表 </a></li>
+                        <li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'users:userckeckedfail_code' %}" >审核未通过程序列表 </a></li>
 						<li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'users:userunckecked_code' %}" >未审核程序列表 </a></li> 
                         <li class="{% ifequal sort '' %}active{% endifequal %}"><a href="{% url 'coding:upload' %}" >上传我的程序 </a></li>
                     </ul>
@@ -27,8 +28,8 @@
                 <div id="inWindow">
                     <div class="tab_cont " id="content">
                     <div class="group_list">
-                        {% if checked_codes %}
-                            {% for code in checked_codes %}
+                        {% if checkedfail_codes %}
+                            {% for code in checkedfail_codes %}
                             <div class="box" style="height: 150px">
                                 <div class="des">
                                     <a href="../../fileshow/{{ user.username }}/{{code.id}}">
