--- a/templates/satellite_index.html
+++ b/templates/satellite_index.html
@@ -4,7 +4,7 @@
 
 {% block custom_bread %}
 {% endblock %}
-<!-- 
+
 {% block content %}
     <div class="banner">
 			<div class="wp">
@@ -16,16 +16,16 @@
                                     <a href="">
                                         <img width="1200" height="478" src="{{ MEDIA_URL }}{{ banner.image }}" />
                                     </a>
-                                </li>
+                            </li>
                             {% endfor %}
 						</ul>
 					</div>
 					<div class="unslider-arrow prev"></div>
 					<div class="unslider-arrow next"></div>
 				</div>
-				</div>
 			</div>
-{% endblock %} -->
+	</div>
+{% endblock %}
 	<!--banner end-->
 
 {% block footer %}
@@ -48,14 +48,6 @@
 			</div>
 		</div>
 	</footer>
-	<section>
-			<ul class="sidebar">
-				<li class="qq">
-					<a target="_blank" href=""></a>
-				</li>
-				<li class="totop"></li>
-			</ul>
-		</section>
 {% endblock %}
 
 {% block custom_js %}
